--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
     <div class="text">
       <a href="https://open.spotify.com/intl-pt/track/1l4pW7Tklvcc3k38rDFMkk?si=84d0a3b0e309419f">You're everything I want </a>
   </div>  
-  <div class="refs">De:Xuxu<br>Para:Denguinho
-</div>  
+  <div class="refs">De:Xuxu<br>Para:Denguinho</div>
+  <div class="batima"><img src="images/Hello Kitty.jpeg" alt="hello"></div>
+ 
 </body>
 </html>
